Fixed: Scrollbars styles

--- a/src/styles/themes/proton/page.setup/menu-editor.styl
+++ b/src/styles/themes/proton/page.setup/menu-editor.styl
@@ -5,6 +5,7 @@
   width: 100%
   height: 100%
   overflow-y: auto
+  scrollbar-color: var(--scrollbar-color) #0000
   background-color: var(--setup-bg)
 
 .MenuEditor section
