--- a/src/styles/themes/proton/page.setup/settings.details-box.styl
+++ b/src/styles/themes/proton/page.setup/settings.details-box.styl
@@ -15,6 +15,7 @@
   background-size: var(--bg-size)
   z-index: 1
   overflow: auto
+  scrollbar-color: var(--scrollbar-color) #0000
 
 .DetailsBox > .box
   position: fixed
