--- a/src/styles/themes/proton/page.setup/settings.styl
+++ b/src/styles/themes/proton/page.setup/settings.styl
@@ -8,6 +8,7 @@
   background-attachment: local
   background-image: var(--bg-img)
   background-size: var(--bg-size)
+  scrollbar-color: var(--scrollbar-color) #0000
 
 .Settings .wrapper
   position: relative
