--- a/src/styles/themes/proton/page.setup/setup.styl
+++ b/src/styles/themes/proton/page.setup/setup.styl
@@ -35,6 +35,7 @@
   --border: #121212
   --status-active: #2494ff
   --btn-fg: #afb2b8
+  --scrollbar-color: #ffffff46
 #root[data-color-scheme="light"]
   --frame-bg: #ffffff
   --frame-fg: #15141A
@@ -46,6 +47,7 @@
   --border: #e2e2e2
   --status-active: #0a84ff
   --btn-fg: #24262a
+  --scrollbar-color: #00000046
 
 html
   position: relative
@@ -94,6 +96,7 @@ body
   padding: 16px 20px 16px 16px
   overflow-y: auto
   overflow-x: hidden
+  scrollbar-color: var(--scrollbar-color) #0000
 
 .root > .nav .option
 .root > .nav .sub-option
