--- a/src/styles/themes/proton/page.setup/snapshots.styl
+++ b/src/styles/themes/proton/page.setup/snapshots.styl
@@ -98,6 +98,7 @@
   flex: 1 0 auto
   overflow-y: auto
   overflow-x: hidden
+  scrollbar-color: var(--scrollbar-color) #0000
   background-attachment: local
   background-image: var(--bg-img)
   background-size: var(--bg-size)
@@ -220,6 +221,7 @@
   flex-flow: column
   align-items: center
   overflow-y: auto
+  scrollbar-color: var(--scrollbar-color) #0000
   background-attachment: local
   background-image: var(--bg-img)
   background-size: var(--bg-size)
