--- a/src/styles/themes/proton/page.setup/styles-editor.styl
+++ b/src/styles/themes/proton/page.setup/styles-editor.styl
@@ -71,6 +71,7 @@
   width: 50%
   height: 100%
   overflow-y: auto
+  scrollbar-color: var(--scrollbar-color) #0000
   background-attachment: local
   background-image: var(--bg-img)
   background-size: var(--bg-size)
@@ -160,6 +161,7 @@
   flex-flow: column
   overflow-y: auto
   overflow-x: hidden
+  scrollbar-color: var(--scrollbar-color) #0000
   background-attachment: local
   background-color: var(--setup-bg)
   background-image: var(--bg-img)
